@@ -1,4 +1,4 @@
-@set UPDATED 27 October 2005
-@set UPDATED-MONTH October 2005
+@set UPDATED 11 December 2005
+@set UPDATED-MONTH December 2005
 @set EDITION 2.2.0
 @set VERSION 2.2.0
