@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: gnubiff_options.h,v $
-// Revision      : $Revision: 1.4 $
-// Revision date : $Date: 2005/04/06 21:38:15 $
+// Revision      : $Revision: 1.5 $
+// Revision date : $Date: 2005/04/07 14:46:53 $
 // Author(s)     : Robert Sowada, Nicolas Rougier
 // Short         : Options for gnubiff
 //
@@ -45,8 +45,9 @@
 const guint	MANUAL_CHECK		=	0;
 const guint	AUTOMATIC_CHECK		=	1;
 
-const guint	GTK_MODE			=	0;
-const guint	GNOME_MODE			=	1;
+const guint	MODE_GTK			=	0;
+const guint	MODE_GNOME			=	1;
+const guint MODE_NOGUI			=   2;
 
 const guint	PROTOCOL_NONE		=	0;
 const guint	PROTOCOL_FILE		=	1;
